Define enum media.mojom.VideoPixelFormat instead of using native enum

A recent CL https://chromium-review.googlesource.com/c/chromium/src/+/1026795
caused a regression by introducing a new mojo enum VideoCapturePixelType and
typemapping it to media::VideoPixelFormat, see Bug 839742.

The motivation for that change was to make the video capture service API,
which had a dependency on the native enum VideoPixelFormat in media_types.mojom,
compatible with an older version of Mojo used on ChromeOS. This older version
does not support native enums.

This CL replaces the bad solution from the CL above with the following:
* Instead of using a native enum VideoPixelFormat in media_types.mojom, declare
  a Mojo enum and move it to a separate file.
* Add typmapping from the Mojo enum to the native enum.
* Have the video capture service API mojoms depend on only the new file
  containing the Mojo enum for VideoPixelFormat. This way we avoid the API
  depending on any file that uses native enums.

Bug: 839742, 847598
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Ifcff064b1f0eb95579119916b757dc6512f49a15
Reviewed-on: https://chromium-review.googlesource.com/1050489
Commit-Queue: Christian Fremerey <chfremer@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566543}
Former-commit-id: 4610d04fac766c5f47e51a8294e3a48da94c0190